# bitsproject

./: Document1.txt  config.json  ec2temp.py  firehoseproducer.py  infraservices.py  lambdaprocess.py  pyproject.toml  requirements.txt  temp.py  temp1.py  video-app-v1.py  video-app-v2.py  video-app-v3.py  video-app.py  video-app1.py  videorender.py  waitress.py  webcamCapture..js
lambdafiles/: fallmodel.py  firemodel.py  lambdaprocess.py  modelactivate.py
site/: .bash_history  ec2-commands - Copy.txt  ec2Script.txt  react-webcam-stream-capture.webm
templates/: collection.html  index copy.html  index.html  index1.html  render.html
utils/: ec2service.py  efsservice.py  firehoseiamservice.py  firehoselambdaservice.py  firehoseservice.py  lambdaservice.py  modelexeclambdaservice.py  s3service.py  s3triggerlambda1iamservice.py  s3triggerlambda2iamservice.py  securitygroupservice.py
